--- a/presence-sensor.yaml
+++ b/presence-sensor.yaml
@@ -44,9 +44,9 @@ ota:
     password: "1faae16d48a5867d978abc88c6745587"
 
 # This should point to the public location of this yaml file.
-#dashboard_import:
-#  package_import_url: github://esphome/esphome-project-template/project-template-esp32.yaml@v6
-#  import_full_config: false # or true
+dashboard_import:
+  package_import_url: github://xqyang2008/esphome.presence_sensor/presence_sensor.yaml@main
+  import_full_config: false # or true
 
 wifi:
   # Set up a wifi access point
